before keycloak fix merge